--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@aws-sdk/client-s3": "^3.441.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/jsonwebtoken": "^9.0.4",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
@@ -29,6 +30,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
     "nodemailer": "^6.9.4",
     "pg": "^8.8.0",
