--- a/server/package.json
+++ b/server/package.json
@@ -22,12 +22,13 @@
     "@types/jsonwebtoken": "^9.0.4",
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.2.0",
+    "cloudinary": "^2.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.9",
     "express": "^4.18.1",
+    "flask": "^0.2.10",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -37,7 +38,9 @@
     "python-shell": "^5.0.0",
     "rimraf": "^5.0.1",
     "sequelize": "^6.25.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "stream": "^0.0.3",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -47,6 +50,7 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.5.0",
     "@types/nodemailer": "^6.4.9",
+    "@types/streamifier": "^0.1.2",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "eslint": "^8.47.0",
