--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/multer": "^1.4.11",
+    "@vercel/postgres": "^0.9.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.3.0",
     "cookie-parser": "^1.4.6",
