--- a/python/.env
+++ b/python/.env
@@ -10,4 +10,4 @@ PUBLIC_CLOUDINARY_CLOUD_NAME=dpmpak81l
 PUBLIC_CLOUDINARY_API_KEY=643734944575655
 PUBLIC_CLOUDINARY_API_SECRET=KQxuGOosez4WyKpzb10nEZrzTLc
 CLOUDINARY_URL=cloudinary://643734944575655:KQxuGOosez4WyKpzb10nEZrzTLc@dpmpak81l
-PY_SCRIPT_PATH="C:/Users/91934/Downloads/hellosnaps-master/server/Hello_Snaps-main/"
+PY_SCRIPT_PATH="D:\hellosnaps\python\Hello_Snaps-main"
