--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "@floating-ui/dom": "1.5.3",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
+    "masonry-layout": "^4.2.2",
     "svelte-cloudinary": "^1.3.2"
   },
   "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/master/packages/create-svelte).",
